# tapio

./: .claude-exceptions.yml  .gitignore  .golangci.yml  .tmp  AGENTS.md  CLAUDE.md  COMMIT_EXPLANATION_FOR_DATNER.md  Cargo.toml  Makefile  README.md  REFACTOR_PLAN.md  TELEMETRY_MIGRATION.md  coverage_decoders.txt  coverage_operator.txt  coverage_scheduler.txt  go.mod  go.sum  justfile  sykli.go  sykli.rs
.github/: pull_request_template.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
api/v1alpha1/: groupversion_info.go  tapioobserver_types.go  zz_generated.deepcopy.go
config/crd/: tapio.io_tapioobservers.yaml
config/samples/: tapioobserver-sample.yaml
docker/: Dockerfile.dev  README.md
docs/: 002-tapio-observer-consolidation.md  003-network-observer-dns-link-status-integration.md  004-wasm-observer-research.md  005-wasm-observer-implementation-guide.md  006-container-observer-design-v2.md  007-container-observer-design-refinements.md  008-node-observer-pmc-ebpf-research-notes.md  008-node-observer-pmc-ebpf.md  009-CRITICAL-FIXES.md  009-observer-runtime-refactor.md  010-intelligence-service-implementation-plan.md  011-supervisor-otel-metrics.md  012-supervisor-health-monitoring.md  AGENT_2_TASKS.md  ARCHITECTURE_RESEARCH_FINDINGS.md  BEYLA_LEARNINGS.md  BEYLA_PATTERNS_IMPLEMENTATION.md  CILIUM_LEARNINGS.md  CONTAINER-OBSERVER-REFERENCE-ARCHITECTURE.md  LOGGING_STANDARDS.md  OTEL_ATTRIBUTE_STANDARDS.md  OTEL_CURRENT_STATE_AUDIT.md  OTEL_OBSERVABILITY_REDESIGN.md  PLATFORM_ARCHITECTURE.md  README-WASM-DOCS.md  agent-controller.md  agent-kernel-config-abi.md  architecture.md  wire-api-standard.md
docs/ai/: STANDARDS.md  WORKFLOW.md
docs/designs/: auto-track-causality.md  causality-correlation-patterns.md  edge-central-data-flow.md  intelligence-service-foundation.md  k8scontext-service-v2.md  observer-roadmap.md  pipeline-wiring.md
docs/tasks/: TASK-001-precomputed-otel-attributes.md  TASK-002-multi-index-metadata-store.md  TASK-003-prometheus-label-transformation.md
ebpf/: container_monitor.c  network_monitor.c  node_pmc_monitor.c  storage_monitor.c
ebpf/headers/: config.h  conn_tracking.h  metrics.h  node_pmc_monitor.h  tcp.h  vmlinux_minimal.h
examples/simple-mode/: README.md  grafana-alloy.yaml  tapio-observers.yaml
hack/: boilerplate.go.txt
internal/base/: cardinality.go  cardinality_test.go  causality.go  causality_test.go  deps.go  ebpf.go  ebpf_test.go  emitter.go  emitter_test.go  exemplar_test.go  logger.go  logger_test.go  metrics.go  metrics_builder.go  metrics_builder_test.go  metrics_test.go  nats_emitter.go  observer.go  observer_core.go  observer_core_test.go  observer_test.go  pipeline.go  pipeline_test.go  prom_metrics.go  prom_metrics_builder.go  prom_metrics_builder_test.go  prom_metrics_test.go  registry.go  registry_test.go  resource.go  resource_test.go  semconv.go  semconv_test.go  telemetry.go  telemetry_test.go  trace.go  trace_test.go
internal/base/bpf/: vmlinux_minimal.h
internal/integrations/k8scontext/: service.go  service_unit_test.go  types.go
internal/observers/container-api/: helpers.go  observer.go  observer_test.go  types.go
internal/observers/container-runtime/: OBSERVERS.md  helpers.go  loader.go  loader_test.go  observer.go  observer_e2e_test.go  observer_integration_test.go  observer_negative_test.go  observer_system_test.go  processor_exit.go  processor_exit_test.go  processor_oom.go  processor_oom_test.go  reader.go  reader_test.go  types.go
internal/runtime/: config.go  config_test.go  ebpf_runtime.go  ebpf_runtime_test.go  emitter.go  emitter_file.go  emitter_file_test.go  emitter_nats.go  emitter_nats_test.go  emitter_otlp.go  emitter_otlp_test.go  health.go  health_test.go  integration_file_emitter_test.go  integration_pipeline_test.go  integration_test.go  k8s_runtime.go  k8s_runtime_test.go  observer_runtime.go  observer_runtime_auto_track_test.go  observer_runtime_causality_test.go  observer_runtime_test.go  panic_recovery.go  panic_recovery_test.go  processor.go  queue.go  queue_test.go  sampler.go  sampler_test.go  testing_helpers.go  tier.go  tier_test.go
pkg/decoders/: config.go  decoder.go  decoder_test.go  inet_ip.go  inet_ip_test.go  k8s_pod.go  k8s_pod_test.go  k8s_service.go  k8s_service_test.go  static_map.go  static_map_test.go  string.go  string_test.go  syscall.go  syscall_test.go  syscalls_amd64.go  syscalls_arm64.go  testing_helpers_test.go
pkg/domain/: causality_test.go  collector_event.go  context.go  context_test.go  edgar_test.go  enrichment.go  enrichment_test.go  events.go  events_test.go  ids.go  ids_test.go  publisher.go  publisher_test.go
pkg/intelligence/: enterprise.go  enterprise_test.go  metrics.go  metrics_test.go  mock.go  mock_test.go  polku.go  polku_integration_test.go  polku_test.go  service.go  service_test.go
pkg/operator/: configmap.go  configmap_test.go  controller.go  controller_integration_test.go  controller_test.go  daemonset.go  daemonset_test.go  finalizer.go  finalizer_test.go  rbac.go  rbac_test.go
pkg/publisher/: polku.go  polku_test.go
scripts/: check-agent-deps.sh  check-dependency-boundaries.sh  smoke-agent-controller.sh  smoke-ebpf-controller-config.sh  smoke-ebpf-network.sh  verify-claude-md.sh  verify-lean.sh
tapio-agent/: Cargo.toml
tapio-agent/src/: config.rs  controller.rs  enricher.rs  enrichment.rs  heartbeat.rs  httpc.rs  main.rs  metrics.rs  registration.rs
tapio-agent/src/observer/: container.rs  mod.rs  network.rs  node_pmc.rs  storage.rs
tapio-agent/src/sink/: controller.rs  file.rs  grafana.rs  http.rs  mod.rs  otlp.rs  polku.rs  stdout.rs
tapio-cli/: Cargo.toml
tapio-cli/src/: main.rs  store.rs
tapio-cli/src/commands/: explain.rs  health.rs  mod.rs  recent.rs  show.rs  status.rs  watch.rs
tapio-common/: Cargo.toml
tapio-common/src/: ebpf.rs  events.rs  lib.rs  occurrence.rs  sink.rs
tapio-controller/: Cargo.toml
tapio-controller/src/: lib.rs  main.rs
tapio-profile/: Cargo.toml
tapio-profile/src/: lib.rs
tapio-wire/: Cargo.toml
tapio-wire/src/: config.rs  lib.rs  v0.rs
(+188 files in other folders)
