[workspace]
resolver = "2"
members = [
    "tapio-common",
    "tapio-agent",
    "tapio-cli",
]

[workspace.package]
version = "4.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/yairfalse/tapio"

[workspace.dependencies]
# eBPF
aya = "0.13"
aya-log = "0.2"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs"] }

# K8s enrichment
kube = { version = "0.98", features = ["runtime", "client"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }

# POLKU sink (gRPC)
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# FALSE Protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", default-features = false }

# HTTP (metrics + health only)
axum = { version = "0.8", default-features = false, features = ["http1", "json"] }
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Essentials
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
ulid = "1"
thiserror = "2"
anyhow = "1"
bytes = "1"

# Workspace crates
tapio-common = { path = "tapio-common" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
