[workspace]
resolver = "2"
members = [
    "tapio-common",
    "tapio-wire",
    "tapio-agent",
    "tapio-controller",
    "tapio-cli",
]

[workspace.package]
version = "4.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/yairfalse/tapio"

[workspace.dependencies]
# eBPF
aya = "0.13"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }

# Protobuf (OTLP export)
prost = "0.13"

# FALSE Protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", default-features = false }

# HTTP (metrics + health only)
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Compression (OTLP gzip)
flate2 = "1"

# System
libc = "0.2"

# Config
toml = "0.8"

# Essentials
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
ulid = "1"
thiserror = "2"
anyhow = "1"

# Workspace crates
tapio-common = { path = "tapio-common" }
tapio-wire = { path = "tapio-wire" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
