[package]
name = "tapio-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tapio-agent"
path = "src/main.rs"

[dependencies]
tapio-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dashmap = "6"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
