[package]
name = "tapio-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tapio-agent"
path = "src/main.rs"

[dependencies]
tapio-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }
prost = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
libc = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
# Concurrent cache for K8s enrichment without blocking observers
dashmap = { workspace = true }
futures = { workspace = true }
