[package]
name = "tapio-agent"
description = "Tapio agent: loads eBPF programs, filters kernel anomalies, enriches with Kubernetes context, emits to sinks (Linux-only)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tapio-agent"
path = "src/main.rs"

[dependencies]
tapio-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[features]
default = []
otlp = ["dep:prost", "dep:flate2", "dep:chrono"]

[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
libc = { workspace = true }
