[package]
name = "tapio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tapio"
path = "src/main.rs"

[dependencies]
tapio-common = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
