[package]
name = "tapio-common"
description = "Shared types for Tapio: kernel.* anomaly events, occurrence schema, and the Sink trait"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
