[package]
name = "tapio-controller"
description = "Minimal Tapio controller for tapio-wire/v1 agent coordination"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tapio-controller"
path = "src/main.rs"

[dependencies]
tapio-wire = { workspace = true }
tapio-profile = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
