[package]
name = "tapio-wire"
description = "Tapio wire protocol structs for the agent/controller boundary"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
status = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
